# fastapi-custom-responses

./: README.md  pyproject.toml
.agents/rules/: fastapi.md  http.md
.claude/rules/: fastapi.md  http.md
.cursor/rules/: fastapi.mdc
.github/scripts/agent_sync/: generation.py
.github/workflows/: run-tests.yml
fastapi_custom_responses/: __init__.py  errors.py  responses.py
tests/: conftest.py  test_errors.py
